<resources>
    <string name="app_name">Jetpack Project</string>

    <string name="home">Home</string>
    <string name="detail">Detail</string>
    <string name="detail_label">"Item = %d"</string>
    <string name="settings">Settings</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="login_button_label">Login</string>
    <string name="user_hint">User</string>
    <string name="password_hint">Password</string>
</resources>
